v1.4.0 (2019.03.xx)
  - Update SQLite database engine to version 3.27.2
  - Retrieve DVR service authorization flag for tuner(s) during device discovery
  - Increase default discovery interval from 5 minutes to 1 hour
  - Increase default lineup discovery interval from 10 minutes to 45 minutes

v1.3.13 (2019.02.12)
  - Update SQLite database engine to version 3.27.1
  - Update cURL library to version 7.64.0
  - Log detected stream properties (real-time, seekable, etc) for diagnostic purposes
  - Detect and report dropped streams if data transfer rate falls to zero
  - Fix bug that caused a dropped stream to be waited on infinitely for more data to become available

v1.3.12 (2019.02.02)
  - Fix bug introduced in v1.3.11 that prevented EPG listings for channels with subchannels (x.x) from loading

v1.3.11 (2019.02.02)
  - Update libhdhomerun library to version 2018.10.27
  - Use pipelined/multiplexed HTTP requests when accessing backend EPG data
  - (Android) Restrict exported symbols to prevent name collisions with shared libraries

v1.3.10 (2019.01.28)
  - Add "Use simplified (flattened) file hierarchy" Edit Decision List (EDL) setting
  - Add "Report CUT indicators as COMBREAK indicators" EDL setting
  - Rename "Start time padding (milliseconds)" EDL setting to "CUT indicator start time padding (milliseconds)"
  - Rename "End time padding (milliseconds)" EDL setting to "CUT indicator end time padding (milliseconds)"
  - Correct improperly specified units of time from "ms" to "s" when logging the parsed EDL file entries
  - Add log message indicating the expected path to an EDL file that could not be found
  - Disable IPv6 DNS (AAAA record) lookups when querying the backend services

v1.3.9 (2019.01.04)
  - Update cURL library to version 7.63.0
  - Display notification when no tuner device(s) were detected during startup

v1.3.8 (2018.12.23)
  - Add "Disable discovery of HDHomeRun RECORD devices" advanced setting